objects/CO_Use_of_Proceeds__c.object
<CustomObject>
    <fields>
        <fullName>CF_Loan_Type_Proceed_Code__c</fullName>
        <label>Loan Type Proceed Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CF_Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Use of Proceeds</relationshipLabel>
        <relationshipName>Use_of_Proceeds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CF_Proceed_Amount__c</fullName>
        <label>Proceed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CF_Source_Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Loan</fullName>
                </value>
                <value>
                    <fullName>Participant Lender OR Seller Carry Not on Standby</fullName>
                </value>
                <value>
                    <fullName>Seller Injection (Full Standby for Life of Loan)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Use of Proceeds</label>
    <nameField>
        <displayFormat>UOP-{000000}</displayFormat>
        <label>Use of Proceeds Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Use of Proceeds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>